# fido2-demo-cli

./: .gitignore  CLAUDE.md  README.md  fido2_demo.py  pyproject.toml  test_fido2_demo.py
.github/workflows/: test.yml
src/fido2_demo/: __init__.py  cli.py
tests/: test_cli.py
