[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "fido2-demo-cli"
version = "0.1.0"
description = "A complete shell-based FIDO2/WebAuthn demo application"
readme = "README.md"
license = "MIT"
requires-python = ">=3.9"
authors = [
    { name = "Ron", email = "fido2-demo-cli@proton.me" }
]
keywords = ["fido2", "webauthn", "passkeys", "security", "authentication", "passwordless", "yubikey", "Google Titan", "SoloKey", "cli"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Security",
    "Topic :: System :: Hardware :: Universal Serial Bus (USB)",
]
dependencies = [
    "fido2>=1.1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
]

[project.scripts]
fido2-demo = "fido2_demo.cli:main"

[project.urls]
Homepage = "https://github.com/yourusername/fido2-demo-cli"
Repository = "https://github.com/yourusername/fido2-demo-cli"
Issues = "https://github.com/yourusername/fido2-demo-cli/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/fido2_demo"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
addopts = "-v"

[tool.coverage.run]
source = ["src/fido2_demo"]
branch = true

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
]
